<resources>
    <string name="app_name">Registro Parking</string>

    <!-- ACTIVITY_MAIN.XML -->
    <string name="hintUsuario">. Usuario</string>
    <string name="hintPassword">. Contraseña</string>
    <string name="btAcceder">Acceder</string>


    <!-- LAY_POPUP.XML -->
    <string name="tvPoptv2">Esto es un simple Popup</string>
    <string name="btCerrar">Cerrar</string>
    <string name="btLlamar">Llamar</string>
    <string name="btPCerrar">Cerrar</string>



    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="asdasd">Estacionamiento</string>
    <string name="ess">ESAN-Campus</string>
    <string name="alooo">Playa Alonso de Molina</string>
    <string name="polo">Playa El Polo</string>
    <string name="title_activity_main">Estacionamiento</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
</resources>
